@@ -65,6 +65,7 @@
     <Compile Include="StringHandlers.cs" />
     <Compile Include="Plugins\MinixFS.cs" />
     <Compile Include="Plugins\SolarFS.cs" />
+    <Compile Include="Plugins\UNIXBFS.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
